<resources>
    <string name="app_name">Prognosis AI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This is a test fragment</string>
    <string name="joydeep">Joydeep</string>
    <string name="start_desc">Empowering you to\ntake control of\nyour health</string>
    <string name="startlogin">Login</string>
    <string name="Startsign_up">Sign Up</string>
    <string name="Startsignup">Sign Up</string>
    <string name="SignUp_sign_up">Sign Up</string>
    <string name="SignUpemail">Email</string>
    <string name="SignUp_password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_Login">Login</string>
    <string name="get_started">Get Started</string>
    <string name="login_login">Login</string>
    <string name="SignUp_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="Login_sign_up">Sign Up</string>
    <string name="almost_done">Almost done!</string>
    <string name="organization_name">Organization Name</string>
    <string name="organization_id">Organization ID</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="contact_number">Contact Number</string>
    <string name="create_account">Create Account</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="fg_forget_password">Forgot Password?</string>
    <string name="don_t_worry_nenter_your_registered_email_id">Don\'t worry!\nEnter your registered Email ID</string>
    <string name="fg_submit">Submit</string>
    <string name="prognosis_ai">Prognosis AI</string>
    <string name="todo">TODO</string>
    <string name="files">Files</string>
    <string name="account">Account</string>
    <string name="files_fragment">Files Fragment</string>
    <string name="predict">Predict</string>
    <string name="account_fragment">Account Fragment</string>
    <string name="patient_details">Patient Details</string>
    <string name="predicted_type_melanoma">Melanoma</string>
    <string name="predicted_type">Predicted Type -</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="d_o_b">D.O.B</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="storage_permission_rationale">This app needs storage permission to create PDFs.</string>
    <string name="state">State</string>
    <string name="actual_id">Actual Id</string>
    <string name="home">Go to home</string>
    <string name="account_details">Account</string>
    <string name="jnm_hospital">XYZ Hospital</string>
    <string name="joydeepp2001_gmail_com">xyzofficial@gmail.com</string>
    <string name="_918918094014">9876543210</string>
    <string name="_04_12_2019">00/00/0000</string>
    <string name="total_no_nof_patients">Total No.\nof patients</string>
    <string name="total_pdf_ngenerated">Total PDF\ngenerated</string>
    <string name="_14">14</string>
    <string name="joydeep_paul">Joydeep Paul</string>
    <string name="_71900865437903">71900865437903</string>
    <string name="_12_04_2024">12/04/2024</string>
    <string name="report">Report</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="update_hospital_details">Update Hospital Details</string>
</resources>