<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".Views.Fragments.SignUpFragment">


    <ImageView
        android:id="@+id/SignUpIllustrator"
        android:layout_width="269dp"
        android:layout_height="237dp"
        android:background="@drawable/consultancy"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/cardview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">
            
            <TextView
                android:layout_width="155dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/SignUp_sign_up"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="#D9D9D9"
                />
            <View
                android:layout_width="126dp"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:layout_gravity="center"
                android:background="#D9D9D9"
                />

            <EditText
                android:id="@+id/SignUpEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn2"
                android:layout_gravity="center"
                android:hint="@string/SignUpemail"
                android:paddingStart="10dp"
                android:textSize="15sp"
                android:fontFamily="@font/montserrat"
                android:textColorHint="#8AECF4D6"
                android:layout_marginTop="40dp"
                />

            <EditText
                android:id="@+id/SignUpPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn2"
                android:layout_gravity="center"
                android:hint="@string/SignUp_password"
                android:paddingStart="10dp"
                android:inputType="numberPassword"
                android:textSize="15sp"
                android:textColorHint="#8AECF4D6"
                android:fontFamily="@font/montserrat"
                android:layout_marginTop="20dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/SignUpGetStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn3"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/get_started"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textColor="#292929"
                android:fontFamily="@font/montserrat"
                />
            
            <LinearLayout
                android:layout_width="249dp"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:layout_height="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/already_have_an_account"
                    android:fontFamily="@font/montserrat"
                    android:textColor="#D9D9D9"
                    android:layout_weight="2"
                    android:textSize="15sp"
                    />
                <TextView
                    android:id="@+id/SignUpLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/SignUp_login"
                    android:fontFamily="@font/montserrat"
                    android:textColor="#D9D9D9"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    />



            </LinearLayout>


            
        </LinearLayout>
        
        


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>