<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg1"
    tools:context=".Views.Fragments.ForgetPassFragment">

    <ImageView
        android:id="@+id/SignUpIllustrator"
        android:layout_width="269dp"
        android:layout_height="237dp"
        android:background="@drawable/forget_password"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/cardview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="260dp"
                android:layout_height="34dp"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/fg_forget_password"
                android:textAllCaps="false"
                android:textColor="#D9D9D9"
                android:textSize="24sp" />

            <TextView
                android:layout_width="260dp"
                android:layout_height="37dp"
                android:textSize="15sp"
                android:fontFamily="@font/montserrat"
                android:text="@string/don_t_worry_nenter_your_registered_email_id"
                android:textAllCaps="false"
                android:layout_marginStart="25dp"
                android:textColor="#D9D9D9"
                android:layout_marginTop="5dp"
                />


            <EditText
                android:id="@+id/fgEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn2"
                android:layout_gravity="center"
                android:hint="@string/SignUpemail"
                android:paddingStart="10dp"
                android:textSize="15sp"
                android:fontFamily="@font/montserrat"
                android:textColorHint="#8AECF4D6"
                android:layout_marginTop="80dp"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fgsubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn3"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/fg_submit"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textColor="#292929"
                android:fontFamily="@font/montserrat"
                />





        </LinearLayout>




    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>